creating the form and trying to get the slider to display its value

--- a/deno.json
+++ b/deno.json
@@ -1,7 +1,7 @@
 {
   "lint": {
     "files": {
-      "exclude": ["tmp/", "stats.js", "spa/", "public/"]
+      "exclude": ["tmp/", "stats.js", "spa/", "public/", "uat/"]
     },
     "rules": {
       "tags": ["recommended"],
