--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,9 +6,9 @@ name: Build
 on:
   # Triggers the workflow on push or pull request events but only for the main branch
   push:
-    branches: [ main ]
+    branches: [ all ]
   pull_request:
-    branches: [ main ]
+    branches: [ all ]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
@@ -33,3 +33,6 @@ jobs:
       
       - name: Perform the system tests and gererate the coverage report
         run: ./new.sh
+        
+      - name: Push all data to the cloud
+        run: git push heroku main
