--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,8 +31,11 @@ jobs:
       - name: Perform a code linter
         run: deno lint --unstable 
       
-      - name: Perform the system tests and gererate the coverage report
+      - name: Perform the system unit tests and gererate the coverage report
         run: ./new.sh
+      
+      - name: Perform user acceptance tests
+        run: deno test --unstable --filter ./uat/
         
       - name: Push all data to the cloud
         run: git push heroku main
